Access modifiers Functional Unicast Multicast: public -> default version 0.1.0-SNAPSHOT -> 0.1.1 FunctionalTest new Double -> Double.valueof